Update and rename Tam_fr.ipynb to Tam_face_recognition_jupyter_notebook.ipynb

--- a/Tam_face_recognition_jupyter_notebook.ipynb
+++ b/Tam_face_recognition_jupyter_notebook.ipynb
@@ -5,7 +5,7 @@
    "execution_count": 1,
    "source": [
     "import face_recognition as fr\n",
-    "# import cv2"
+    "# import cv2"https://github.com/nguyenZzzz/ThuTamNguyen_facial_recognition/blob/master/Tam_fr.ipynb
    ],
    "outputs": [],
    "metadata": {}
